[package]
name = "bitcoincore-rpc-bch"
version = "0.17.0"
authors = [
    "Steven Roose <steven@stevenroose.org>",
    "Jean Pierre Dudey <jeandudey@hotmail.com>",
    "Dawid Ciężarkiewicz <dpc@dpc.pw>",
]
license = "CC0-1.0"
homepage = "https://github.com/rust-bitcoin/rust-bitcoincore-rpc/"
repository = "https://github.com/rust-bitcoin/rust-bitcoincore-rpc/"
description = "RPC client library for the Bitcoin Core JSON-RPC API."
keywords = ["crypto", "bitcoin", "bitcoin-core", "rpc"]
readme = "README.md"
edition = "2018"

[lib]
name = "bitcoincore_rpc_bch"
path = "src/lib.rs"

[dependencies]
bitcoincore-rpc-json = { version = "0.17.0", path = "../json" }

log = "0.4.5"
jsonrpc = { git = "https://github.com/benlevi1/rust-jsonrpc.git", rev = "c4150d3e596340cb691faa3275907d0470375950", features = ["minreq_http"] }

# Used for deserialization of JSON.
serde = "1"
serde_json = "1"
bitcoin-private = "0.1.0"
